--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.25.1",
