--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
