--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.11",
+    "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -32,6 +33,7 @@
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "recharts": "^2.12.7",
+    "to-words": "^4.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
