Add razorpay functionality

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.7",
     "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
